--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,7 @@
 		<ul>
 			<li><a href="index.html"><span>home</span></a></li>
 			<li><a href="about.html"><span>about us</span></a></li>
-			<li><a href="services.html"><span>services</span></a></li>
-			<li><a href="products.html"><span>products</span></a></li>
+			<li><a href="gallery.html"><span>gallery</span></a></li>
 			<li class="selected"><a href="contact.html"><span>contact us</span></a></li>
 		</ul>
 	</div>
@@ -32,7 +31,6 @@
 		</div>
 		<div class="contact">
 			<h1>contact us</h1>
-			<p>Mar Baselios Institute of Technology and Science</p>
 			<div>
 				<h3>Call Us</h3>
 				<ul>
