--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Mbits Master of Computer Application</title>
 	<link rel="stylesheet" type="text/css" href="style.css" media="all" />
 </head>
@@ -22,7 +23,7 @@
 	<div id="body">
 		<div class="header">
 			<div>
-				<div class="d-flex justify-content-center">
+				<div>
 					<h3>Master of Computer Application</h3>
 				</div>
 			</div>
