Gallery page created

--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Business Solutions</title>
+	<title>Mbits Master of Computer Application</title>
 	<link rel="stylesheet" type="text/css" href="style.css" media="all" />
 </head>
 
@@ -23,47 +23,36 @@
 	<div id="body">
 		<div class="header">
 			<div>
-				<div class="d-flex justify-content-center">
+				<div> 
 					<h3>Master of Computer Application</h3>
 				</div>
 			</div>
 		</div>
 		<div class="products">
-			<h1>product</h1>
-			<div>
-				<h2>we have free templates for everyone</h2>
-				<p>This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free
-						Website Templates</a> for you, for free. You can replace all this text with your own text. You
-					can remove any link to our website from this website template, you're free to use this website
-					template without linking back to us. If you're having problems editing this website template, then
-					don't hesitate to ask for help on the <a href="http://www.freewebsitetemplates.com/forum">Forum</a>.
-				</p>
-			</div>
+			<h1>gallery</h1>
 			<div>
 				<div>
-					<h3>Proin molestienipurus vulpu tate suscipitS uspend</h3>
-					<img src="images/discuss2.jpg" alt="" />
-					<p>Morbi laoreet, tellus non tristique vulputate, dolor quam scelerisque nulla, id facilisis velit
-						ante sit amet lorem. Nullam vulputate lorem id massa pharetra eu posuere</p>
+					<img src="image/WhatsAppImage(1).jpeg" style="height: 200px; width: 250px;" alt="" />
 				</div>
 				<div>
-					<h3>Suspendisse euisMaurimod au gue penatibus </h3>
-					<img src="images/flags2.jpg" alt="" />
-					<p>Velit ante sit amet lorem. Nullam vulputate lorem id massa pharetra eu posuere lorem egestas.
-						Nulla inpurus quisquam fermentum imperdiet</p>
+					<img src="image/WhatsAppImage(2).jpeg" style="height: 200px; width: 250px;" alt="" />
 				</div>
 				<div>
-					<h3>fringilla congue elitel plac erat mau riscommodoCu</h3>
-					<img src="images/graph3.jpg" alt="" />
-					<p>Nullam vulputate lorem id massa pharetra eu posuere lorem egestas. Nulla in purus quis quam
-						fermentum imperdiet arcu Sed ipsum velit, tristique vel sollicitudin </p>
+					<img src="image/WhatsAppImage(3).jpeg" style="height: 200px; width: 250px;" alt="" />
+				</div>
+				<div>
+					<img src="image/WhatsAppImage(4).jpeg" style="height: 200px; width: 250px;" alt="" />
+				</div>
+				<div>
+					<img src="image/WhatsAppImage(5).jpeg" style="height: 200px; width: 250px;" alt="" />
+				</div>
+				<div>
+					<img src="image/WhatsAppImage(6).jpeg" style="height: 200px; width: 250px;" alt="" />
+				</div>
+				<div>
+					<img src="image/WhatsAppImage(7).jpeg" style="height: 200px; width: 250px;" alt="" />
 				</div>
 			</div>
-			<p>This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website
-					Templates</a> for you, for free. You can replace all this text with your own text. You can remove
-				any link to our website from this website template, you're free to use this website template without
-				linking back to us. If you're having problems editing this website template, then don't hesitate to ask
-				for help on the <a href="http://www.freewebsitetemplates.com/forum">Forum</a>.</p>
 		</div>
 	</div>
 	<div id="footer">
