--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</div>
 		<div class="footer">
 			<div class="section">
-				<h3><a href="blog.html">Posts</a></h3>
+				<h3>Posts</h3>
 				<ul>
 					<li>
 						<p>Chandrayaan-3 Launch</p>
