fix small changes

--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<!-- Template by freewebsitetemplates.com -->
 <html>
 
 <head>
 	<meta charset="utf-8" />
 	<title>Mbits Master of Computer Application</title>
-	<link rel="stylesheet" type="text/css" href="style.css" media="all" />
+	<link rel="stylesheet" type="text/css" href="./assets/css/style.css" media="all" />
 </head>
 
 <body>
@@ -24,7 +23,7 @@
 		<div class="header">
 			<div>
 				<div>
-					<h3>Master of Computer Application</h3>
+					<h3>Department of Computer Application</h3>
 				</div>
 			</div>
 		</div>
@@ -52,7 +51,10 @@
 				<h3>Visit our college</h3>
 				<ul>
 					<li>Nellimattom P.O, Kothamangalam, Ernakulam District, Kerala, India, PIN : 686693</li>
-					<li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.4989655474624!2d76.66854997481094!3d10.058139472032003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b07e8c21773f2f9%3A0xf8cc8247d7da7a9c!2sMar%20Baselios%20Institute%20of%20Technology%20and%20Science!5e0!3m2!1sen!2sin!4v1693850091916!5m2!1sen!2sin" width="830" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></li>
+					<li><iframe
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.4989655474624!2d76.66854997481094!3d10.058139472032003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b07e8c21773f2f9%3A0xf8cc8247d7da7a9c!2sMar%20Baselios%20Institute%20of%20Technology%20and%20Science!5e0!3m2!1sen!2sin!4v1693850091916!5m2!1sen!2sin"
+							width="830" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+							referrerpolicy="no-referrer-when-downgrade"></iframe></li>
 				</ul>
 			</div>
 		</div>
@@ -81,14 +83,14 @@
 				<h3>follow us:</h3>
 				<a class="facebook" href="https://www.facebook.com/profile.php?id=61550903789245&mibextid=avESrC"
 					target="_blank">
-					<img src="./image/facebook-fill.png" alt="Facebook" />
+					<img src="./assets/image/facebook-fill.png" alt="Facebook" />
 				</a>
 				<a class="instagram" href="https://instagram.com/mca_mbits?utm_source=qr&igshid=YzU1NGVlODEzOA%3D%3D"
 					target="_blank">
-					<img src="./image/instagram-fill.png" alt="Instagram" />
+					<img src="./assets/image/instagram-fill.png" alt="Instagram" />
 				</a>
 				<a class="linkedin" href="https://www.linkedin.com/school/mbits-nellimattom/" target="_blank">
-					<img src="./image/linkedin-fill.png" alt="Linkedin" />
+					<img src="./assets/image/linkedin-fill.png" alt="Linkedin" />
 				</a>
 			</div>
 		</div>
