--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Mbits Master of Computer Application</title>
-	<link rel="stylesheet" type="text/css" href="style.css" media="all" />
+	<link rel="stylesheet" type="text/css" href="./assets/css/style.css" media="all" />
 </head>
 
 <body>
@@ -24,21 +24,21 @@
 		<div class="header">
 			<div>
 				<div>
-					<h3>Master of Computer Application</h3>
+					<h3>Department of Computer Application</h3>
 				</div>
 			</div>
 		</div>
 		<div class="footer">
 			<div class="section">
-				<h3>Posts</h3>
+				<h3>Updates</h3>
 				<ul>
 					<li>
 						<p>Chandrayaan-3 Launch</p>
 						<span><a
 								href="https://www.facebook.com/permalink.php?story_fbid=122098035056030126&id=61550903789245&ref=embed_post" target="_blank"><img
-									src="./image/facebook-fill.png" alt="" /></a>|<a
+									src="./assets/image/facebook-fill.png" alt="" /></a>|<a
 								href="https://www.instagram.com/p/CwS1FVWvzYc/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank"><img
-									src="./image/instagram-fill.png" alt="" /></a></span>
+									src="./assets/image/instagram-fill.png" alt="" /></a></span>
 					</li>
 				</ul>
 			</div>
@@ -109,14 +109,14 @@
 				<h3>follow us:</h3>
 				<a class="facebook" href="https://www.facebook.com/profile.php?id=61550903789245&mibextid=avESrC"
 					target="_blank">
-					<img src="./image/facebook-fill.png" alt="Facebook" />
+					<img src="./assets/image/facebook-fill.png" alt="Facebook" />
 				</a>
 				<a class="instagram" href="https://instagram.com/mca_mbits?utm_source=qr&igshid=YzU1NGVlODEzOA%3D%3D"
 					target="_blank">
-					<img src="./image/instagram-fill.png" alt="Instagram" />
+					<img src="./assets/image/instagram-fill.png" alt="Instagram" />
 				</a>
 				<a class="linkedin" href="https://www.linkedin.com/school/mbits-nellimattom/" target="_blank">
-					<img src="./image/linkedin-fill.png" alt="Linkedin" />
+					<img src="./assets/image/linkedin-fill.png" alt="Linkedin" />
 				</a>
 			</div>
 		</div>
