--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Mbits Master of Computer Application</title>
-	<link rel="stylesheet" type="text/css" href="style.css" media="all" />
+	<link rel="stylesheet" type="text/css" href="./assets/css/style.css" media="all" />
 </head>
 
 <body>
@@ -22,8 +22,8 @@
 	<div id="body">
 		<div class="header">
 			<div>
-				<div class="d-flex justify-content-center">
-					<h3>Master of Computer Application</h3>
+				<div>
+					<h3>Department of Computer Application</h3>
 				</div>
 			</div>
 		</div>
@@ -92,14 +92,14 @@
 				<h3>follow us:</h3>
 				<a class="facebook" href="https://www.facebook.com/profile.php?id=61550903789245&mibextid=avESrC"
 					target="_blank">
-					<img src="./image/facebook-fill.png" alt="Facebook" />
+					<img src="./assets/image/facebook-fill.png" alt="Facebook" />
 				</a>
 				<a class="instagram" href="https://instagram.com/mca_mbits?utm_source=qr&igshid=YzU1NGVlODEzOA%3D%3D"
 					target="_blank">
-					<img src="./image/instagram-fill.png" alt="Instagram" />
+					<img src="./assets/image/instagram-fill.png" alt="Instagram" />
 				</a>
 				<a class="linkedin" href="https://www.linkedin.com/school/mbits-nellimattom/" target="_blank">
-					<img src="./image/linkedin-fill.png" alt="Linkedin" />
+					<img src="./assets/image/linkedin-fill.png" alt="Linkedin" />
 				</a>
 			</div>
 		</div>
