Change to bootstrap, changed design

--- a/about.html
+++ b/about.html
@@ -131,7 +131,9 @@
                         reserved/PWD category) in the qualifying examination.
                     </li>
                     <li><strong>* For students having no Mathematics background compulsory bridge courses related
-                        to Mathematics and other computer subjects have been framed by APJAKTU</strong></li>
+                            to Mathematics and other computer subjects have been framed by APJAKTU</strong></li>
+                    <li><button class="btn" style="background-color: #346b84;"><a href="./assets/image/brochure.jpeg"
+                                style="text-decoration: none; color: #ffffff;">Check our Brochure</a></button></li>
                 </ul>
                 </p>
             </div>
@@ -160,8 +162,7 @@
                 <div class="card mb-3" style="max-width:600px;">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="./assets/image/faculty-profile-01.jpeg" class="img-fluid rounded-start"
-                                alt="...">
+                            <img src="./assets/image/faculty-profile-01.jpeg" class="img-fluid rounded-start" alt="...">
                         </div>
                         <div class="col-md-4">
                             <div class="card-body">
@@ -181,8 +182,7 @@
                 <div class="card mb-3" style="max-width: 600px; margin-left: 20px;">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="./assets/image/faculty-profile-02.jpeg" class="img-fluid rounded-start"
-                                alt="...">
+                            <img src="./assets/image/faculty-profile-02.jpeg" class="img-fluid rounded-start" alt="...">
                         </div>
                         <div class="col-md-4">
                             <div class="card-body">
@@ -211,28 +211,30 @@
                     <ul>
                         <li>Nellimattom P.O, Kothamangalam, Ernakulam District, Kerala, India</li>
                         <li>PIN : 686693</li>
-                        <li>Phone : <a href="tel:0485 - 2837801">0485 - 2837801</a></li>
-                        <li>Mail : <a href="mailto:info@mbits.ac.in">info@mbits.ac.in</a></li>
+                        <li>Phone : <a href="tel:0485 - 2837801" style="text-decoration: none;">0485 - 2837801</a></li>
+                        <li>Mail : <a href="mailto:info@mbits.ac.in" style="text-decoration: none;">info@mbits.ac.in</a>
+                        </li>
                     </ul>
                 </div>
                 <div>
                     <h3>HELPFUL LINKS</h3>
                     <ul>
-                        <li><a href="https://mbits.ac.in/">Main Website</a></li>
+                        <li><a href="https://mbits.ac.in/" style="text-decoration: none;">Main Website</a></li>
                     </ul>
                 </div>
                 <div>
                     <h3>follow us:</h3>
                     <a class="facebook" href="https://www.facebook.com/profile.php?id=61550903789245&mibextid=avESrC"
-                        target="_blank">
+                        style="text-decoration: none;" target="_blank">
                         <img src="./assets/image/facebook-fill.png" alt="Facebook" />
                     </a>
                     <a class="instagram"
                         href="https://instagram.com/mca_mbits?utm_source=qr&igshid=YzU1NGVlODEzOA%3D%3D"
-                        target="_blank">
+                        style="text-decoration: none;" target="_blank">
                         <img src="./assets/image/instagram-fill.png" alt="Instagram" />
                     </a>
-                    <a class="linkedin" href="https://www.linkedin.com/school/mbits-nellimattom/" target="_blank">
+                    <a class="linkedin" href="https://www.linkedin.com/school/mbits-nellimattom/"
+                        style="text-decoration: none;" target="_blank">
                         <img src="./assets/image/linkedin-fill.png" alt="Linkedin" />
                     </a>
                 </div>
