--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,10 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Mbits Master of Computer Application</title>
+	<title>Department of Computer Applications</title>
 	<link rel="stylesheet" type="text/css" href="./assets/css/style.css" media="all" />
+	<!-- Latest compiled and minified CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -23,7 +25,7 @@
 		<div class="header">
 			<div>
 				<div>
-					<h3>Department of Computer Application</h3>
+					<h3>Department of Computer Applications</h3>
 				</div>
 			</div>
 		</div>
@@ -32,17 +34,18 @@
 			<div>
 				<h3>Call Us</h3>
 				<ul>
-					<li><a href="tel:0485 - 2837801">0485 - 2837801</a></li>
-					<li><a href="tel:+91 9446735380">+91 9446735380</a></li>
+					<li><a href="tel:0485 - 2837801" style="text-decoration: none;">0485 - 2837801</a></li>
+					<li><a href="tel:+91 9446735380" style="text-decoration: none;">+91 9446735380</a></li>
 					<li>9:00 am to 5:00 pm (Monday to Friday)</li>
 				</ul>
 				<h3>Contact Mail</h3>
 				<ul>
-					<li><a href="mailto:info@mbits.ac.in">info@mbits.ac.in</a></li>
+					<li><a href="mailto:info@mbits.ac.in" style="text-decoration: none;">info@mbits.ac.in</a></li>
 				</ul>
 				<h3>Admission Mail</h3>
 				<ul>
-					<li><a href="mailto:admission@mbits.ac.in">admission@mbits.ac.in</a></li>
+					<li><a href="mailto:admission@mbits.ac.in" style="text-decoration: none;">admission@mbits.ac.in</a>
+					</li>
 				</ul>
 				<h3>Admission WhatsApp</h3>
 				<ul>
@@ -69,27 +72,29 @@
 				<ul>
 					<li>Nellimattom P.O, Kothamangalam, Ernakulam District, Kerala, India</li>
 					<li>PIN : 686693</li>
-					<li>Phone : <a href="tel:0485 - 2837801">0485 - 2837801</a></li>
-					<li>Mail : <a href="mailto:info@mbits.ac.in">info@mbits.ac.in</a></li>
+					<li>Phone : <a href="tel:0485 - 2837801" style="text-decoration: none;">0485 - 2837801</a></li>
+					<li>Mail : <a href="mailto:info@mbits.ac.in" style="text-decoration: none;">info@mbits.ac.in</a>
+					</li>
 				</ul>
 			</div>
 			<div>
 				<h3>HELPFUL LINKS</h3>
 				<ul>
-					<li><a href="https://mbits.ac.in/">Main Website</a></li>
+					<li><a href="https://mbits.ac.in/" style="text-decoration: none;">Main Website</a></li>
 				</ul>
 			</div>
 			<div>
 				<h3>follow us:</h3>
 				<a class="facebook" href="https://www.facebook.com/profile.php?id=61550903789245&mibextid=avESrC"
-					target="_blank">
+					style="text-decoration: none;" target="_blank">
 					<img src="./assets/image/facebook-fill.png" alt="Facebook" />
 				</a>
 				<a class="instagram" href="https://instagram.com/mca_mbits?utm_source=qr&igshid=YzU1NGVlODEzOA%3D%3D"
-					target="_blank">
+					style="text-decoration: none;" target="_blank">
 					<img src="./assets/image/instagram-fill.png" alt="Instagram" />
 				</a>
-				<a class="linkedin" href="https://www.linkedin.com/school/mbits-nellimattom/" target="_blank">
+				<a class="linkedin" href="https://www.linkedin.com/school/mbits-nellimattom/"
+					style="text-decoration: none;" target="_blank">
 					<img src="./assets/image/linkedin-fill.png" alt="Linkedin" />
 				</a>
 			</div>
@@ -98,6 +103,8 @@
 			<p>&copy Copyright 2023. All rights reserved</p>
 		</div>
 	</div>
+	<!-- Latest compiled JavaScript -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
