--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                             <div class="card-header">
                                 <h3 class="card-title text-center mt-2">Updates</h3>
                             </div>
-                            <div class="card-body p-2" style="overflow-y: auto; max-height: 200px;">
+                            <div class="card-body p-2"
+                                style="overflow-y: auto; width: 100%; height: 200px; max-height: 200px;">
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item">
                                         <div class="card-text">
@@ -64,11 +65,12 @@
                             <div class="card-header">
                                 <h3 class="card-title text-center mt-2">Events</h3>
                             </div>
-                            <div class="card-body p-2" style="overflow-y: auto; max-height: 200px;">
+                            <div class="card-body p-2"
+                                style="overflow-y: auto; width: 100%; height: 200px; max-height: 200px;">
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item">
                                         <div class="card-text">
-                                            Hardware Session
+                                            <a href="./gallery.html#hardware-program" style="text-decoration: none; color: #000000;">Hardware Session</a>
                                         </div>
                                     </li>
                                 </ul>
@@ -100,7 +102,8 @@
                         <div class="row mb-4">
                             <div class="col-lg-4 mb-4 mb-lg-0">
                                 <div class="card" style="width: 18rem;">
-                                    <img src="./assets/image/offer-01.png" width="60px" height="auto" class="card-img-top" alt="...">
+                                    <img src="./assets/image/offer-01.png" width="60px" height="auto"
+                                        class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title text-center">
                                             <a href="about.html#faculty-profile"
@@ -168,27 +171,28 @@
                 <ul>
                     <li>Nellimattom P.O, Kothamangalam, Ernakulam District, Kerala, India</li>
                     <li>PIN : 686693</li>
-                    <li>Phone : <a href="tel:0485 - 2837801">0485 - 2837801</a></li>
-                    <li>Mail : <a href="mailto:info@mbits.ac.in">info@mbits.ac.in</a></li>
+                    <li>Phone : <a href="tel:0485 - 2837801" style="text-decoration: none;">0485 - 2837801</a></li>
+                    <li>Mail : <a href="mailto:info@mbits.ac.in" style="text-decoration: none;">info@mbits.ac.in</a></li>
                 </ul>
             </div>
             <div>
                 <h3>HELPFUL LINKS</h3>
                 <ul>
-                    <li><a href="https://mbits.ac.in/">Main Website</a></li>
+                    <li><a href="https://mbits.ac.in/" style="text-decoration: none;">Main Website</a></li>
                 </ul>
             </div>
             <div>
                 <h3>follow us:</h3>
                 <a class="facebook" href="https://www.facebook.com/profile.php?id=61550903789245&mibextid=avESrC"
-                    target="_blank">
+                    style="text-decoration: none;" target="_blank">
                     <img src="./assets/image/facebook-fill.png" alt="Facebook" />
                 </a>
                 <a class="instagram" href="https://instagram.com/mca_mbits?utm_source=qr&igshid=YzU1NGVlODEzOA%3D%3D"
-                    target="_blank">
+                    style="text-decoration: none;" target="_blank">
                     <img src="./assets/image/instagram-fill.png" alt="Instagram" />
                 </a>
-                <a class="linkedin" href="https://www.linkedin.com/school/mbits-nellimattom/" target="_blank">
+                <a class="linkedin" href="https://www.linkedin.com/school/mbits-nellimattom/"
+                    style="text-decoration: none;" target="_blank">
                     <img src="./assets/image/linkedin-fill.png" alt="Linkedin" />
                 </a>
             </div>
