--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="col-lg-6 mb-4 mb-lg-0">
                         <div class="card mb-3" style="width: 25rem; overflow: hidden;">
                             <div class="card-header">
-                                <h3 class="card-title text-center mt-2">Updates</h3>
+                                <h3 class="card-title text-center mt-2" style="color: #346b84;">Updates</h3>
                             </div>
                             <div class="card-body p-2"
                                 style="overflow-y: auto; width: 100%; height: 200px; max-height: 200px;">
@@ -63,7 +63,7 @@
                     <div class="col-lg-6 mb-4 mb-lg-0">
                         <div class="card mb-3" style="width: 25rem; overflow: hidden;">
                             <div class="card-header">
-                                <h3 class="card-title text-center mt-2">Events</h3>
+                                <h3 class="card-title text-center mt-2" style="color: #346b84;">Events</h3>
                             </div>
                             <div class="card-body p-2"
                                 style="overflow-y: auto; width: 100%; height: 200px; max-height: 200px;">
