--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
 					alt="mbits logo" /></a>
 		</div>
 		<ul>
-			<li><a href="index.html"><span>home</span></a></li>
+			<li><a href="/"><span>home</span></a></li>
 			<li><a href="about.html"><span>about us</span></a></li>
 			<li class="selected"><a href="gallery.html"><span>gallery</span></a></li>
 			<li><a href="contact.html"><span>contact us</span></a></li>
