about-page-responsive

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Department of Computer Applications</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" media="all" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <!-- Latest compiled and minified CSS -->
 </head>
 
 <body>
@@ -119,22 +118,30 @@
             </div>
             <div>
                 <h3>follow us:</h3>
-                <a class="facebook" href="https://www.facebook.com/profile.php?id=61550903789245&mibextid=avESrC"
-                    style="text-decoration: none;" target="_blank">
-                    <img src="./assets/image/facebook-fill.png" alt="Facebook" />
-                </a>
-                <a class="instagram" href="https://instagram.com/mca_mbits?utm_source=qr&igshid=YzU1NGVlODEzOA%3D%3D"
-                    style="text-decoration: none;" target="_blank">
-                    <img src="./assets/image/instagram-fill.png" alt="Instagram" />
-                </a>
-                <a class="linkedin" href="https://www.linkedin.com/school/mbits-nellimattom/"
-                    style="text-decoration: none;" target="_blank">
-                    <img src="./assets/image/linkedin-fill.png" alt="Linkedin" />
-                </a>
+                <div class="social-media">
+                    <a class="facebook" href="https://www.facebook.com/profile.php?id=61550903789245&mibextid=avESrC"
+                        style="text-decoration: none;" target="_blank">
+                        <img src="./assets/image/facebook-fill.png" alt="Facebook" />
+                    </a>
+                    <a class="instagram" href="https://instagram.com/mca_mbits?utm_source=qr&igshid=YzU1NGVlODEzOA%3D%3D"
+                        style="text-decoration: none;" target="_blank">
+                        <img src="./assets/image/instagram-fill.png" alt="Instagram" />
+                    </a>
+                    <a class="linkedin" href="https://www.linkedin.com/school/mbits-nellimattom/"
+                        style="text-decoration: none;" target="_blank">
+                        <img src="./assets/image/linkedin-fill.png" alt="Linkedin" />
+                    </a>
+                </div>
             </div>
         </div>
         <div>
-            <p>&copy Copyright 2023. All rights reserved</p>
+            <iframe
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.4989655474624!2d76.66854997481094!3d10.058139472032003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b07e8c21773f2f9%3A0xf8cc8247d7da7a9c!2sMar%20Baselios%20Institute%20of%20Technology%20and%20Science!5e0!3m2!1sen!2sin!4v1693850091916!5m2!1sen!2sin"
+							width="830" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+							referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div>
+            <p>&copy Copyright 2024. All rights reserved</p>
         </div>
     </div>
 </body>
