--- a/contact.html
+++ b/contact.html
@@ -37,44 +37,31 @@
             </ul>
         </div>
         <div id="body">
-            <div class="header">
-                <div>
-                    <div>
-                        <h3>Department of Computer Applications</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="contact">
+            <div class="about">
                 <h1>contact us</h1>
-                <div>
-                    <h3>Call Us</h3>
-                    <ul>
-                        <li><a href="tel:0485 - 2837801" style="text-decoration: none;">0485 - 2837801</a></li>
-                        <li><a href="tel:+91 9446735380" style="text-decoration: none;">+91 9446735380</a></li>
-                        <li>9:00 am to 5:00 pm (Monday to Friday)</li>
-                    </ul>
-                    <h3>Contact Mail</h3>
-                    <ul>
-                        <li><a href="mailto:info@mbits.ac.in" style="text-decoration: none;">info@mbits.ac.in</a></li>
-                    </ul>
-                    <h3>Admission Mail</h3>
-                    <ul>
-                        <li><a href="mailto:admission@mbits.ac.in"
-                                style="text-decoration: none;">admission@mbits.ac.in</a>
-                        </li>
-                    </ul>
-                    <h3>Admission WhatsApp</h3>
-                    <ul>
-                        <li>+91 9061063801</li>
-                    </ul>
-                    <h3>Visit our college</h3>
-                    <ul>
-                        <li>Nellimattom P.O, Kothamangalam, Ernakulam District, Kerala, India, PIN : 686693</li>
-                        <li><iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.4989655474624!2d76.66854997481094!3d10.058139472032003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b07e8c21773f2f9%3A0xf8cc8247d7da7a9c!2sMar%20Baselios%20Institute%20of%20Technology%20and%20Science!5e0!3m2!1sen!2sin!4v1693850091916!5m2!1sen!2sin"
-                                width="830" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                                referrerpolicy="no-referrer-when-downgrade"></iframe></li>
-                    </ul>
+                <div class="contact-us">
+                    <div>
+                        <h3>Call Us</h3>
+                        <p>0485 - 2837801 <br>
+                            +91 9446735380 <br>
+                            9:00 am to 5:00 pm (Monday to Friday)</p>
+                    </div>
+                    <div>
+                        <h3>Contact Mail</h3>
+                        <p>info@mbits.ac.in</p>
+                    </div>
+                    <div>
+                        <h3>Admission Mail</h3>
+                        <p>admission@mbits.ac.in</p>
+                    </div>
+                    <div>
+                        <h3>Admission WhatsApp</h3>
+                        <p>+91 9061063801</p>
+                    </div>
+                    <div>
+                        <h3>Visit our college</h3>
+                        <p>Nellimattom P.O, Kothamangalam, Ernakulam District, Kerala, India, PIN : 686693</p>
+                    </div>
                 </div>
             </div>
         </div>
