update-gallery & faculty profile

--- a/Gallery/year2023.html
+++ b/Gallery/year2023.html
@@ -16,11 +16,11 @@
     <div id="content" class="hidden">
         <div class="toggle-ul" id="toggle-ul">
             <ul>
-                <li onclick="toggleClose()">Close<i class="fa-solid fa-xmark"></i></li>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../about.html">about us</a></li>
-                <li><a href="../gallery.html">gallery</a></li>
-                <li><a href="../contact.html">contact us</a></li>
+                <li onclick="toggleClose()">CLOSE<i class="fa-solid fa-xmark"></i></li>
+                <li><a href="index.html"><span>HOME</span></a></li>
+                <li><a href="about.html"><span>ABOUT US</span></a></li>
+                <li><a href="gallery.html"><span>GALLERY</span></a></li>
+                <li><a href="contact.html"><span>CONTACT US</span></a></li>
             </ul>
         </div>
         <div id="header">
@@ -41,17 +41,11 @@
         <div id="body">
             <div class="about">
                 <div class="program">
-                    <h2>Induction Program - 2023</h2>
+                    <h2>Agile & Basics of Dev Ops Workshop</h2>
                     <div class="gallery-images">
-                        <img src="../assets/image/induction-01.jpeg" alt="" onclick="openImg('../assets/image/induction-01.jpeg')">
-                        <img src="../assets/image/induction-02.jpeg" alt="" onclick="openImg('../assets/image/induction-02.jpeg')">
-                        <img src="../assets/image/induction-03.jpeg" alt="" onclick="openImg('../assets/image/induction-03.jpeg')">
-                    </div>
-                </div>
-                <div class="program">
-                    <h2>Onam - 2023</h2>
-                    <div class="gallery-images">
-                        <img src="../assets/image/onam-01.jpeg" alt="" onclick="openImg('../assets/image/onam-01.jpeg')">
+                        <img src="../assets/image/agile-01.jpg" alt="" onclick="openImg('../assets/image/agile-01.jpg')">
+                        <img src="../assets/image/agile-02.jpg" alt="" onclick="openImg('../assets/image/agile-02.jpg')">
+                        <img src="../assets/image/agile-03.jpg" alt="" onclick="openImg('../assets/image/agile-03.jpg')">
                     </div>
                 </div>
                 <div class="program">
@@ -62,6 +56,20 @@
                         <img src="../assets/image/hardware-03.jpeg" alt="" onclick="openImg('../assets/image/hardware-03.jpeg')">
                         <img src="../assets/image/hardware-04.jpg" alt="" onclick="openImg('../assets/image/hardware-04.jpg')">
                         <img src="../assets/image/hardware-05.jpg" alt="" onclick="openImg('../assets/image/hardware-05.jpg')">
+                    </div>
+                </div>
+                <div class="program">
+                    <h2>Onam - 2023</h2>
+                    <div class="gallery-images">
+                        <img src="../assets/image/onam-01.jpeg" alt="" onclick="openImg('../assets/image/onam-01.jpeg')">
+                    </div>
+                </div>
+                <div class="program">
+                    <h2>Induction Program - 2023</h2>
+                    <div class="gallery-images">
+                        <img src="../assets/image/induction-01.jpeg" alt="" onclick="openImg('../assets/image/induction-01.jpeg')">
+                        <img src="../assets/image/induction-02.jpeg" alt="" onclick="openImg('../assets/image/induction-02.jpeg')">
+                        <img src="../assets/image/induction-03.jpeg" alt="" onclick="openImg('../assets/image/induction-03.jpeg')">
                     </div>
                 </div>
             </div>
