--- a/about.html
+++ b/about.html
@@ -14,11 +14,11 @@
     <div id="content" class="hidden">
         <div class="toggle-ul" id="toggle-ul">
             <ul>
-                <li onclick="toggleClose()">Close<i class="fa-solid fa-xmark"></i></li>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">about us</a></li>
-                <li><a href="gallery.html">gallery</a></li>
-                <li><a href="contact.html">contact us</a></li>
+                <li onclick="toggleClose()">CLOSE<i class="fa-solid fa-xmark"></i></li>
+                <li><a href="index.html"><span>HOME</span></a></li>
+                <li><a href="about.html"><span>ABOUT US</span></a></li>
+                <li><a href="gallery.html"><span>GALLERY</span></a></li>
+                <li><a href="contact.html"><span>CONTACT US</span></a></li>
             </ul>
         </div>
         <div id="header">
@@ -101,15 +101,15 @@
                         is also handy for students to take out cash from the ATM.</p>
                 </div>
                 <div class="faculty">
-                    <h2>Faculty Profile</h2>
+                    <h2>Faculty Members</h2>
                     <div>
                         <div class="faculty-profile">
-                            <img src="./assets/image/faculty-profile-01.jpeg" alt="">
+                            <img src="./assets/image/faculty-profile-01.jpg" alt="">
                             <div>
                                 <h2>Reshma S</h2>
                                 <p>
                                     HOD Incharge & Assistant Professor <br>
-                                    Master of Computer Applications <br>
+                                    Department of Computer Applications <br>
                                     MCA, UGC NET and Pursuing PHD <br>
                                     8547991401 <br>
                                     hodca@mbits.ac.in , reshma@mbits.ac.in
@@ -117,15 +117,68 @@
                             </div>
                         </div>
                         <div class="faculty-profile">
-                            <img src="./assets/image/faculty-profile-02.jpeg" alt="">
+                            <img src="./assets/image/faculty-profile-02.jpg" alt="">
                             <div>
                                 <h2>Merin Joy M</h2>
                                 <p>
                                     Assistant Professor <br>
-                                    Master of Computer Applications <br>
+                                    Department of Computer Applications <br>
                                     MCA <br>
                                     8281630513 <br>
                                     merinjoy@mbits.ac.in
+                                </p>
+                            </div>
+                        </div>
+                        <div class="faculty-profile">
+                            <img src="./assets/image/faculty-profile-03.jpg" alt="">
+                            <div>
+                                <h2>KESIYA SAJU</h2>
+                                <p>
+                                    Assistant Professor <br>
+                                    Department of Computer Applications <br>
+                                    MCA <br>
+                                    9544121546 <br>
+                                    kesiya@mbits.ac.in
+                                </p>
+                            </div>
+                        </div>
+                        <div class="faculty-profile">
+                            <img src="./assets/image/faculty-profile-04.jpg" alt="">
+                            <div>
+                                <h2>Sumi K Eldho</h2>
+                                <p>
+                                    Assistant Professor <br>
+                                    Department of Computer Applications <br>
+                                    MCA <br>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="faculty-profile">
+                            <img src="./assets/image/faculty-profile-05.jpg" alt="">
+                            <div>
+                                <h2>Reenu Sebu</h2>
+                                <p>
+                                    Assistant Professor <br>
+                                    Department of Computer Applications <br>
+                                    MCA <br>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="faculty">
+                    <h2>Technical Staff</h2>
+                    <div>
+                        <div class="faculty-profile">
+                            <img src="./assets/image/technical-staff-01.jpg" alt="">
+                            <div>
+                                <h2>ADHARSH AJI</h2>
+                                <p>
+                                    Trade Instructor <br>
+                                    Department of Computer Applications <br>
+                                    Diploma <br>
+                                    85902 38874 <br>
+                                    adharsh@mbits.ac.in
                                 </p>
                             </div>
                         </div>
