--- a/gallery.html
+++ b/gallery.html
@@ -14,11 +14,11 @@
     <div id="content" class="hidden">
         <div class="toggle-ul" id="toggle-ul">
             <ul>
-                <li onclick="toggleClose()">Close<i class="fa-solid fa-xmark"></i></li>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">about us</a></li>
-                <li><a href="gallery.html">gallery</a></li>
-                <li><a href="contact.html">contact us</a></li>
+                <li onclick="toggleClose()">CLOSE<i class="fa-solid fa-xmark"></i></li>
+                <li><a href="index.html"><span>HOME</span></a></li>
+                <li><a href="about.html"><span>ABOUT US</span></a></li>
+                <li><a href="gallery.html"><span>GALLERY</span></a></li>
+                <li><a href="contact.html"><span>CONTACT US</span></a></li>
             </ul>
         </div>
         <div id="header">
@@ -40,7 +40,8 @@
             <div class="about">
                 <h1>gallery</h1>
                 <div class="gallery">
-                    <div class="y-2023" id="y-2023"><h1>2023</h1></div>
+                    <div id="y-2024" style="background-image: url(./assets/image/python-01.jpg);"><h1>2024</h1></div>
+                    <div id="y-2023" style="background-image: url(./assets/image/onam-01.jpeg);"><h1>2023</h1></div>
                 </div>
             </div>
         </div>
