--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <div id="content" class="hidden">
         <div class="toggle-ul" id="toggle-ul">
             <ul>
-                <li onclick="toggleClose()">Close<i class="fa-solid fa-xmark"></i></li>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">about us</a></li>
-                <li><a href="gallery.html">gallery</a></li>
-                <li><a href="contact.html">contact us</a></li>
+                <li onclick="toggleClose()">CLOSE<i class="fa-solid fa-xmark"></i></li>
+                <li><a href="index.html"><span>HOME</span></a></li>
+                <li><a href="about.html"><span>ABOUT US</span></a></li>
+                <li><a href="gallery.html"><span>GALLERY</span></a></li>
+                <li><a href="contact.html"><span>CONTACT US</span></a></li>
             </ul>
         </div>
         <div id="header">
